processor/src/fast/tests/snapshots/miden_processor__fast__tests__all_ops__fast__tests__all_ops__test_basic_block__stack_inputs_01_vec_____operations_65_vec__Operation__BCompress_.snap
---
source: processor/src/fast/tests/all_ops.rs
assertion_line: 134
expression: fast_stack_outputs
---
Ok(
    StackOutputs {
        elements: [
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            11321306251789973367,
            17790521719117481951,
            2410518900219608187,
            10152649483649143293,
            0,
            0,
            0,
            0,
        ],
    },
)
