processor/src/fast/tests/snapshots/miden_processor__fast__tests__all_ops__fast__tests__all_ops__test_basic_block__stack_inputs_01_vec_____operations_65_vec__Operation__HPerm_.snap
---
source: processor/src/fast/tests/all_ops.rs
assertion_line: 134
expression: fast_stack_outputs
---
Ok(
    StackOutputs {
        elements: [
            6571218845873207350,
            16394535650441775880,
            16729865362321995388,
            2844291130404209122,
            16063200788640006260,
            8977422641387935540,
            1100773186654011623,
            5296950920151051251,
            15508716854571599505,
            12365938385714563620,
            8500300421301734173,
            10881775167266999286,
            0,
            0,
            0,
            0,
        ],
    },
)
